Added more readability to the code and fixed some typos.

--- a/PythonDataAnalysis/NumPyBasic(Ch4).ipynb
+++ b/PythonDataAnalysis/NumPyBasic(Ch4).ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNMFGUkmZRPxmoABBHNogAf",
+      "authorship_tag": "ABX9TyNkyRZvYyfhCtEyig32aP/A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,6 +70,16 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# 4.1: The NumPy ndarray: A Multidimensional Array Object\n",
+        "One of the key features of NumPy is its N-dimensional array object, or ndarray, which is a fast, flexible container for large datasets in Python.   "
+      ],
+      "metadata": {
+        "id": "5MJLdzcfgFB5"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "## Introduction to Numpy\n",
         "One of the reasons NumPy is so important for numerical computations in python is because it is designed for efficiency on large arrays of data.\n",
         "\n",
@@ -83,9 +93,9 @@
       "cell_type": "markdown",
       "source": [
         "## Creating an Array (ndarray)\n",
-        "**ndarray = N-dimentional arrays**\n",
-        "\n",
         "The easiest way to create an array is to use the **array function**. This accepts any sequence-like object(including other arrays) and produces a NumPy array containing the passed data.\n",
+        "\n",
+        "**ndarray = N-dimentional arrays**\n",
         "\n",
         "**Note:** although **ndarrays** supports only `homogeneous` data types (elements within it are of the same data type).\n",
         "- You can also use **ndarrays** with different data type, using dtype = 'object'"
@@ -152,6 +162,72 @@
     {
       "cell_type": "markdown",
       "source": [
+        "### Explicity Convert/Cast Array\n",
+        "You can explicitly convert or cast an array from one data type to another using ndarray’s `astype` method:\n",
+        "\n",
+        "If I cast some floating-point numbers to be of integer data type, the decimal part will be truncated:\n",
+        "\n",
+        "If you have an array of strings representing numbers, you can use astype to convert them to numeric form:\n",
+        "\n",
+        "**NOTE:** Calling `astype` always creates a new array (a copy of the data), even if the new data type is the same as the old data type."
+      ],
+      "metadata": {
+        "id": "2pzp7ffYa7Tv"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "# Create a 1D integer array\n",
+        "arr = np.array([1, 2, 3, 4, 5])\n",
+        "\n",
+        "# Convert integers to floats using astype()\n",
+        "print(f'Before Cast: {arr}\\nConverting to floats: {arr.astype(np.float64)}\\n')\n",
+        "\n",
+        "# Create a 1D float array\n",
+        "floatArr = np.array([3.7, -1.2, -2.6, 0.5, 12.9, 10.1])\n",
+        "\n",
+        "# Convert floats to integers (truncates decimal part, does not round)\n",
+        "print(f'Before Cast: {floatArr}\\nConverting to Integers: {floatArr.astype(np.int64)}')\n",
+        "print(\"Notice how the number after the decimal is cut off!!\\n\")\n",
+        "\n",
+        "# Create an array of numeric strings\n",
+        "numeric_strings = np.array([\"1.25\", \"-9.6\", \"42\"])\n",
+        "\n",
+        "# Convert string values to floats\n",
+        "print(f'Before Cast: {numeric_strings}\\nConverting to floats: {numeric_strings.astype(np.float64)}')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cIvrRYb7bsTF",
+        "outputId": "34ef906f-b831-46f0-e1eb-878ec2f738ac"
+      },
+      "execution_count": 92,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Before Cast: [1 2 3 4 5]\n",
+            "Converting to floats: [1. 2. 3. 4. 5.]\n",
+            "\n",
+            "Before Cast: [ 3.7 -1.2 -2.6  0.5 12.9 10.1]\n",
+            "Converting to Integers: [ 3 -1 -2  0 12 10]\n",
+            "Notice how the number after the decimal is cut off!!\n",
+            "\n",
+            "Before Cast: ['1.25' '-9.6' '42']\n",
+            "Converting to floats: [ 1.25 -9.6  42.  ]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "### NumPy Array Indexing\n",
         "Knowning the basic of array indexing is important for analyzing and manipulating the array object.\n",
         "- **Basic indexing:** Basic indexing in NumPy allows you to access elements of an array using indices"
@@ -166,43 +242,62 @@
         "# Some examples of array indexing\n",
         "import numpy as np\n",
         "\n",
+        "# --- 1D Array ---\n",
         "print(\"1D array:\")\n",
         "\n",
-        "# Creating 1D array\n",
-        "arr = np.array([1,2,3,4,5])\n",
+        "# Creating a 1D array\n",
+        "arr = np.array([1, 2, 3, 4, 5])\n",
+        "print(arr)\n",
         "\n",
-        "# printing arr\n",
-        "print(f\"{arr}\")\n",
-        "\n",
+        "# Accessing a single element (index 2 → third element)\n",
         "print(f'Single Element Access: arr[2] = {arr[2]}')\n",
         "\n",
-        "# negitive indexing gets the last element\n",
+        "# Negative indexing → last element (-1)\n",
         "print(f'Negative Indexing: arr[-1] = {arr[-1]}\\n')\n",
         "\n",
-        "# 2D array\n",
-        "print(f'2D array:')\n",
-        "arr2d = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
+        "\n",
+        "# --- 2D Array ---\n",
+        "print(\"2D array:\")\n",
+        "\n",
+        "# Creating a 2D array (matrix)\n",
+        "arr2d = np.array([[1, 2, 3],\n",
+        "                  [4, 5, 6],\n",
+        "                  [7, 8, 9]])\n",
         "print(arr2d)\n",
         "\n",
-        "# Indexing 2D array\n",
-        "print(f\"Array access: arr2d[1,1] = {arr2d[1,1]}\")\n",
-        "print(f'Negative access: arr2d[-1,0] = {arr2d[-1,0]}\\n')\n",
+        "# Accessing element at row 1, column 1 (zero-based index)\n",
+        "print(f'Array access: arr2d[1, 1] = {arr2d[1, 1]}')\n",
         "\n",
-        "# 3D Array\n",
-        "print(f\"3D Array:\")\n",
-        "arr3d = np.array([[[1,2,3],[4,5,6],[7,8,9]],[[11,22,33],[44,55,66],[77,88,99]]])\n",
+        "# Negative indexing in 2D: last row (-1), first column (0)\n",
+        "print(f'Negative access: arr2d[-1, 0] = {arr2d[-1, 0]}\\n')\n",
+        "\n",
+        "\n",
+        "# --- 3D Array ---\n",
+        "print(\"3D array:\")\n",
+        "\n",
+        "# Creating a 3D array (2 pages, each 3×3)\n",
+        "arr3d = np.array([\n",
+        "    [[1, 2, 3],\n",
+        "     [4, 5, 6],\n",
+        "     [7, 8, 9]],\n",
+        "\n",
+        "    [[11, 22, 33],\n",
+        "     [44, 55, 66],\n",
+        "     [77, 88, 99]]\n",
+        "])\n",
         "print(arr3d)\n",
-        "print(f'Array access: arr3d[1,1,0] = {arr3d[1,1,0]}')\n",
-        "\n"
+        "\n",
+        "# Accessing element: page 1, row 1, column 0\n",
+        "print(f'Array access: arr3d[1, 1, 0] = {arr3d[1, 1, 0]}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "W7PEhPMP5OlK",
-        "outputId": "70061f86-3c4d-49a6-cda7-ea8175af83a1"
+        "outputId": "e49d1aaa-dc9d-41f8-d2fc-a6050d58e7c9"
       },
-      "execution_count": 63,
+      "execution_count": 93,
       "outputs": [
         {
           "output_type": "stream",
@@ -217,10 +312,10 @@
             "[[1 2 3]\n",
             " [4 5 6]\n",
             " [7 8 9]]\n",
-            "Array access: arr2d[1,1] = 5\n",
-            "Negative access: arr2d[-1,0] = 7\n",
+            "Array access: arr2d[1, 1] = 5\n",
+            "Negative access: arr2d[-1, 0] = 7\n",
             "\n",
-            "3D Array:\n",
+            "3D array:\n",
             "[[[ 1  2  3]\n",
             "  [ 4  5  6]\n",
             "  [ 7  8  9]]\n",
@@ -228,7 +323,7 @@
             " [[11 22 33]\n",
             "  [44 55 66]\n",
             "  [77 88 99]]]\n",
-            "Array access: arr3d[1,1,0] = 44\n"
+            "Array access: arr3d[1, 1, 0] = 44\n"
           ]
         }
       ]
@@ -236,7 +331,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Slicing(NEED TO DO THIS)"
+        "### Slicing(NEED TO DO THIS)\n"
       ],
       "metadata": {
         "id": "c7zNewP597jQ"
@@ -359,13 +454,6 @@
     },
     {
       "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "r9vSZXVSF-Lm"
-      }
-    },
-    {
-      "cell_type": "markdown",
       "source": [
         "### 3D Array Example"
       ],
@@ -378,23 +466,40 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "# Here we will create a 3D array and return it to validate it is a 3 dimensional array.\n",
+        "# Create a 3D array (2 pages, each with 3 rows and 4 columns)\n",
+        "arr_3d = np.array([\n",
+        "    [[1, 2, 3, 99],\n",
+        "     [4, 5, 6, 99],\n",
+        "     [22, 23, 24, 99]],\n",
         "\n",
-        "arr_3d = np.array([[[1,2,3,99],[4,5,6,99],[22,23,24,99]],[[7,8,9,99],[10,11,12,99],[33,44,55,99]]])\n",
+        "    [[7, 8, 9, 99],\n",
+        "     [10, 11, 12, 99],\n",
+        "     [33, 44, 55, 99]]\n",
+        "])\n",
+        "\n",
+        "# Display the 3D array\n",
         "print(f'3D array:\\n{arr_3d}\\n')\n",
+        "\n",
+        "# Number of dimensions (should be 3 for a 3D array)\n",
         "print(f\"The dimensions of this 3D matrix: {arr_3d.ndim}\")\n",
+        "\n",
+        "# Shape → (pages, rows, columns)\n",
         "print(f\"Shape of the matrix: {arr_3d.shape}\")\n",
+        "\n",
+        "# Total number of elements in the array\n",
         "print(f\"Size of the matrix: {arr_3d.size} Elements\")\n",
-        "print(f\"dtype of this matrix: {arr_3d.dtype}\")"
+        "\n",
+        "# Data type of elements in the array\n",
+        "print(f\"dtype of this matrix: {arr_3d.dtype}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ku64EvjeTwR3",
-        "outputId": "eba6d314-00a6-4d9c-db60-1a7e2732b214"
+        "outputId": "40185204-7b2e-405a-ae74-fa2537e692fb"
       },
-      "execution_count": 77,
+      "execution_count": 94,
       "outputs": [
         {
           "output_type": "stream",
@@ -431,23 +536,36 @@
       "source": [
         "import numpy as np\n",
         "\n",
-        "# Here we will create a 2D array and return it to validate it is a 2 dimensional array.\n",
+        "# Create a 2D array (3 rows × 4 columns)\n",
+        "arr_2d = np.array([\n",
+        "    [1, 2, 3, 99],\n",
+        "    [4, 5, 6, 99],\n",
+        "    [22, 23, 24, 99]\n",
+        "])\n",
         "\n",
-        "arr_3d = np.array([[1,2,3,99],[4,5,6,99],[22,23,24,99]])\n",
-        "print(f'2D array:\\n{arr_3d}\\n')\n",
-        "print(f\"The dimensions of this 2D matrix: {arr_3d.ndim}\")\n",
-        "print(f\"Shape of the matrix: {arr_3d.shape}\")\n",
-        "print(f\"Size of the matrix: {arr_3d.size} Elements\")\n",
-        "print(f\"dtype of this matrix: {arr_3d.dtype}\")"
+        "# Display the 2D array\n",
+        "print(f'2D array:\\n{arr_2d}\\n')\n",
+        "\n",
+        "# Number of dimensions (should be 2 for a 2D array)\n",
+        "print(f\"The dimensions of this 2D matrix: {arr_2d.ndim}\")\n",
+        "\n",
+        "# Shape → (rows, columns)\n",
+        "print(f\"Shape of the matrix: {arr_2d.shape}\")\n",
+        "\n",
+        "# Total number of elements in the array\n",
+        "print(f\"Size of the matrix: {arr_2d.size} Elements\")\n",
+        "\n",
+        "# Data type of elements in the array\n",
+        "print(f\"dtype of this matrix: {arr_2d.dtype}\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "W5Lb3xG4F-74",
-        "outputId": "effe442d-6722-4f80-9c14-e447f36fde69"
+        "outputId": "75986f5c-490e-4936-a43a-ce852cf71fb4"
       },
-      "execution_count": 81,
+      "execution_count": 95,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,68 +587,14 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##4.1: The NumPy ndarray: A Multidimensional Array Object\n",
-        "One of the key features of NumPy is its N-dimensional array object, or ndarray, which is a fast, flexible container for large datasets in Python.     "
+        "## Arithmetic with NumPy Arrays\n",
+        "Arrays are important because they enable you to express batch operations on data without writing any for loops. NumPy users call this ***vectorization***. Any arithmetic operations between equal-size arrays apply the operation element-wise:\n",
+        "\n",
+        "Evaluating operations between differently sized arrays is called ***broadcasting***"
       ],
       "metadata": {
-        "id": "roPB2IQmE3h5"
+        "id": "FlbMYyC1gVcc"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import numpy as np"
-      ],
-      "metadata": {
-        "id": "YhdXUkFLOZ7N"
-      },
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "names = np.array([[\"angel\", \"bob\"], [\"ariana\", \"briana\"]])\n",
-        "print(names.shape)   # (2, 2)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "E_JQMrLkOfBr",
-        "outputId": "37b980fe-427b-4824-c144-adbf0d5d8aa3"
-      },
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "(2, 2)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "v6Nmc7h1OzkI",
-        "outputId": "cf94c601-4f81-4ccf-c38e-ca3c78e6c5e3"
-      },
-      "execution_count": 6,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "bob\n"
-          ]
-        }
-      ]
     }
   ]
 }
